client/src/views/Profile/prof.css
.cont
{
    display: flex;
    flex-direction: row;
    height: 100%;
    width: 100%;
    margin-bottom: 10%;
}
.col1
{
    width: 50%;
   height: 20%;
    display: flex;
    flex-direction: column;
   margin-top:-45%;
   box-sizing: border-box;
}
.headig
{
    margin-left: -35%;
    color: #3A82EF;
    font-size: 58px;
    margin-bottom: 1%;
    letter-spacing: 0.05em;
    font-family: Georgia, Times, 'Times New Roman', serif;
}
.username
{
    margin-left: 15%;
    color: #3A82EF;
    font-size: 38px;
    margin-top: 5%;
    letter-spacing: 0.05em;
    font-family: Georgia, Times, 'Times New Roman', serif;
}
.subheadig
{
    margin-left: 15%;
    color: #3A82EF;
    font-size: 30px;
    margin-top: 5%;
    letter-spacing: 0.05em;
    font-family: Georgia, Times, 'Times New Roman', serif;
}
.desc
{
    margin-left: 15%;
}
.bullet
{
    padding: 0;
    font-size: 20px;
    margin-top: 2%;
    margin-left: 20%;
}
.profimg
{
    border-radius: 5px;
    margin-left: 10%;
    margin-bottom: 5%;
}

.editbtn
{
    background-color: #3A82EF;
    border-radius: 6px;
    width: 400px;
    padding: 5px;
    height: 50px;
    color: white;
    border: none;
    font-size: 20px;
    margin-left: 25%;
}
.editbtn:hover{
    font-weight: bolder;
}
.col2
{
    height: 20%;
    display: flex;
    width: 50%;
    flex-direction: column;
   margin-top:-45%;
   box-sizing: border-box;
}

